see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, 1.7 and 2.5, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

30-Jun-2012
 # [#28763] Make the field for installing sample data easier to use (Elin Waring)
 # [#28751] *Copy Template Feature - language files have capital letters (Jean-Marie Simonet)
 # [#28647] Registration form: language override for "Name" label causes side effects (Johannnes S-F)
 # [#28759] Undefined property: JSite::$registeredurlparams (Rouven Weßling) 

29-Jun-2012 Jean-Marie Simonet
 # [#28713] Article Media Manager: 'This file is too large to upload' appears in a Media Manager screen
 # [#28733] administrator/mod_menu Bug! Thanks Sebastian

26-Jun-2012 Jean-Marie Simonet
 # [#28745] mailto fatal error when sending article-mail in joomla 2.5.6. Thanks Rouven.
 # [#28682] "Articles" appearing in title. Thanks Christophe
 
26-Jun-2012 Christophe Demko
 ^ [#28730] Use the MVC legacy aliases in the administrator (Rouven Weßling)

25-Jun-2012 Christophe Demko
 ^ [#28683] Replace uses of JHtml::core() (Michael Babker)
 ^ [#28736] Don't use APIs not present in Platform 12.2 (Rouven Weßling)
 # [#28690] Wrong Content Type for JSON response (Elijah Madden)
 + [#28651] Security concern: passwords should not be sent via email (Johannes S-F)
 + [#28738] Add more sniffs to the code style checker (Rouven Weßling)

22-Jun-2012 Jean-Marie Simonet
 # [#28709] Commit of progress bar feature missed a layout file. Thanks Mark

20-Jun-2012 Jean-Marie Simonet
 ^ Disable install checks for development

-------------------- 2.5.6 Stable Release [19-June-2012] ------------------

19-Jun-2012 Mark Dexter
 # [#28704] Menu type aliases causing fatal php error. Thanks Andrea.