@@ -77,7 +77,7 @@ class MediaControllerFolder extends JControllerLegacy
 					continue;
 				}
 
-				$fullPath = JPath::clean(implode(DS, array(COM_MEDIA_BASE, $folder, $path)));
+				$fullPath = JPath::clean(implode(DIRECTORY_SEPARATOR, array(COM_MEDIA_BASE, $folder, $path)));
 				$object_file = new JObject(array('filepath' => $fullPath));
 				if (is_file($fullPath))
 				{
